# Nokia-PK-2021

./: .clang-format  .clang-tidy  README.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ccpp.yml
BTS/QtApplicationEnvironment/Transport/: QtTransport.cpp
COMMON/Config/: MultiLineConfig.cpp
COMMON/Tests/: MultiLineConfigTestSuite.cpp
Doc/Lectures/: wymagania przedmiotu.pptx
Doc/Lectures/02. GitIntroduction/: 2021.03.04 Git Introduction.pptx
Doc/Lectures/03. UML Basics & Design Patterns/: 2021.03.04 Uml Overview.pptx
Doc/Lectures/04. Standard Library/Examples/Containers/: 1.Array.cpp  10.Tuple.cpp  2.Vector.cpp  3.List.cpp  4.Deque.cpp  5.Set.cpp  6.Map.cpp  7.Stack.cpp  8.Queue.cpp  9.PriorityQueue.cpp
Doc/Lectures/04. Standard Library/Examples/Pointers and RAII/: 1.MemoryLeak.cpp  2.toRAII.cpp  3.Exception.cpp  4.UniquePointers.cpp  5.SharedPointers.cpp  6.WeakPointers.cpp  7.CyclicDep.cpp
Doc/Lectures/05.StdAlgorithms/Exercises/: 01_find_intersection_indices.cpp  02_find_distances_between_identical_elements.cpp  03_erase_if.cpp  04_permutation_iterator.cpp  CMakeLists.txt
Doc/Lectures/06.Multithreading/: CMakeLists.txt
Doc/Lectures/06.Multithreading/conditional_variable/: main.cpp
Doc/Lectures/06.Multithreading/data_race/: main.cpp
Doc/Lectures/06.Multithreading/dead_lock/: main.cpp
Doc/Lectures/06.Multithreading/promise/: main.cpp
Doc/Lectures/11.UnitTesting/MasterMind/: CMakeLists.txt
Doc/Lectures/11.UnitTesting/MasterMind/Application/: CMakeLists.txt  main.cpp
Doc/Lectures/11.UnitTesting/MasterMind/Tests/: CMakeLists.txt  GameTestSuite.cpp  IMatcherMock.hpp  MatcherTestSuite.cpp
Doc/Lectures/11.UnitTesting/MasterMind/TextPresentation/: CMakeLists.txt  TextPresentation.cpp
UE/: CMakeLists.txt  main.cpp
UE/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Context.hpp  IEventsHandler.hpp  ISmsDb.hpp  Sms.hpp  SmsDb.cpp  SmsDb.hpp
UE/Application/Ports/: BtsPort.cpp  BtsPort.hpp  IBtsPort.hpp  ITimerPort.hpp  IUserPort.hpp  TimerPort.cpp  TimerPort.hpp  UserPort.cpp  UserPort.hpp
UE/Application/States/: BaseState.cpp  BaseState.hpp  ConnectedState.cpp  ConnectedState.hpp  ConnectingState.cpp  ConnectingState.hpp  NotConnectedState.cpp  NotConnectedState.hpp  TalkingState.cpp  TalkingState.hpp
UE/QtApplicationEnvironment/Transport/: Transport.cpp
UE/Tests/Application/: ApplicationTestSuite.cpp  CMakeLists.txt  SmsDbTestSuite.cpp
UE/Tests/Application/Mocks/: IApplicationEnvironmentMock.cpp  IApplicationEnvironmentMock.hpp  IBtsPortMock.cpp  IBtsPortMock.hpp  ISmsDbMock.cpp  ISmsDbMock.hpp  ITimerPortMock.cpp  ITimerPortMock.hpp  IUeGuiMock.cpp  IUeGuiMock.hpp  IUserPortMock.cpp  IUserPortMock.hpp
UE/Tests/Application/Ports/: BtsPortTestSuite.cpp  TimerPortTestSuite.cpp  UserPortTestSuite.cpp
googletest/googletest/src/: gtest-internal-inl.h
